...
    @State private var showingDetails = false
    @State private var pinLocation: CLLocationCoordinate2D? = nil
    
    var body: some View {
        
        ZStack(alignment: .topTrailing) {
            Map(coordinateRegion: $viewModel.locationManager.region, showsUserLocation: true, annotationItems: viewModel.searchResults) { point in
                MapAnnotation(coordinate: point.coordinate) {
                    Button(action: {
                        showingDetails.toggle()
                    }) {
                        ZStack {
                            Circle()
...
                                .frame(width: 40, height: 40)
                            Text(getInfoForSelectedParam(point))
                                .frame(width: 40, height: 40)
                                .scaledToFit()
                                .foregroundStyle(.background)
                        }
                        .accessibilityIdentifier("InfoPoint")
                    }
                    .sheet(isPresented: $showingDetails) {
                        DetailedInfoView(chosenPoint: point)
                            .presentationDetents([.height(300)])
                            .accessibilityIdentifier("DetailedInfoView")
                    }
                }
            }
            .ignoresSafeArea()
...
                    ForEach(AirQualityParameters.allCases, id: \.self) {
                        Text($0.localizedName)
                            .foregroundStyle(.white)
                            .fontWeight(.bold)
                    }
                }
                .accessibilityIdentifier("PickerView")
                .pickerStyle(.menu)
                .frame(width: 120, height: 60)
                .background(
                    RoundedRectangle(cornerRadius: 16)
                        .fill(Color(UIColor.systemBackground))
                  )
                .padding(.top, 20)
                .padding(.trailing, 10)
                
                LocationButton {
                    viewModel.locationManager.requestLocation()
                }
                .accessibilityIdentifier("LocationButton")
                .frame(width: 60, height: 60)
                .background(
                    RoundedRectangle(cornerRadius: 16)
                        .fill(Color(UIColor.systemBackground))
                )
                .labelStyle(.iconOnly)
...
